--- a/computer_guess.ipynb
+++ b/computer_guess.ipynb
@@ -2,14 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tebrikler, doğru tahmin ettiniz! :)\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mÇekirdek başlatılamadı. \n",
+      "\u001b[1;31mAttributeError: partially initialized module 'random' has no attribute 'randint' (most likely due to a circular import). \n",
+      "\u001b[1;31mDaha fazla ayrıntı için Jupyter <a href='command:jupyter.viewOutput'>günlüğüne</a> bakın."
      ]
     }
    ],
