--- a/ucgenler.ipynb
+++ b/ucgenler.ipynb
@@ -26,7 +26,7 @@
       ],
       "source": [
         "num = 5\n",
-        "for i in range(1,num+1):\n",
+        "for i in range(1, num+1):\n",
         "  print(\"*\"*i)"
       ]
     },
@@ -54,7 +54,7 @@
         }
       ],
       "source": [
-        "for i in range(5,0,-1):\n",
+        "for i in range(5, 0, -1):\n",
         "  print(\"*\"*i)"
       ]
     },
@@ -82,7 +82,7 @@
         }
       ],
       "source": [
-        "for i in range(1,6):\n",
+        "for i in range(1, 6):\n",
         "  print(\" \"*(5-i), \"*\"*i)"
       ]
     },
@@ -111,7 +111,7 @@
       ],
       "source": [
         "num=5\n",
-        "for i in range(1,num+1):\n",
+        "for i in range(1, num+1):\n",
         "  print(\" \"* (num-i),\"*\"*i)"
       ]
     },
@@ -140,7 +140,7 @@
       ],
       "source": [
         "for i in range(5):\n",
-        "  for j in range(i,5): \n",
+        "  for j in range(i, 5): \n",
         "    print(\"\", end=\" \")\n",
         "  for j in range(i+1): \n",
         "    print(\"*\", end=\"\")\n",
@@ -174,7 +174,7 @@
         "for i in range(5):\n",
         "  for j in range(i+1): \n",
         "    print(\" \", end=\"\")\n",
-        "  for j in range(i,5): \n",
+        "  for j in range(i, 5): \n",
         "    print(\"*\", end=\"\")\n",
         "  print(\" \")"
       ]
@@ -204,8 +204,8 @@
       ],
       "source": [
         "num=5\n",
-        "for i in range(num,0,-1):\n",
-        "  print(\" \"*(num-i),\"*\"*i)"
+        "for i in range(num, 0, -1):\n",
+        "  print(\" \"*(num-i), \"*\"*i)"
       ]
     },
     {
@@ -232,7 +232,7 @@
         }
       ],
       "source": [
-        "for i in range(1,6):\n",
+        "for i in range(1, 6):\n",
         "    print((6-i)*\" \",\"*\"*2*i)"
       ]
     },
@@ -261,7 +261,7 @@
       ],
       "source": [
         "for i in range(5):\n",
-        "    print(\" \"*i,\"*\"*(2*(5-i)))"
+        "    print(\" \"*i,\"*\"*(2* (5-i)))"
       ]
     },
     {
@@ -288,8 +288,8 @@
         }
       ],
       "source": [
-        "for i in range(10,0,-2):\n",
-        "  print(\" \"*int((10-i)/2), \"*\"*i)"
+        "for i in range(10, 0, -2):\n",
+        "  print(\" \"*int((10-i) / 2), \"*\"*i)"
       ]
     },
     {
@@ -317,8 +317,8 @@
       ],
       "source": [
         "num=5\n",
-        "for i in range(1,num+1):\n",
-        "       print(\"*\" *i+\" \"* ((num-i)*2) + \"*\"*i)"
+        "for i in range(1, num+1):\n",
+        "       print(\"*\" *i+\" \"* ((num-i) *2) + \"*\"*i)"
       ]
     }
   ],
