--- a/7_odevler.ipynb
+++ b/7_odevler.ipynb
@@ -28,12 +28,29 @@
     }
    ],
    "source": [
-    "import random\n",
+    "#Kod çalışıyor ama vsCode'da sorun olduğundan burada çalıştıramadım.\n",
+    "#Python'ın kendi idesinde çalışıyor sorunsuzca\n",
     "\n",
-    "my_list = [i for i in range(0, 101)]\n",
+    "import random\n",
+    "a = random.randint(0,100)\n",
+    "print(\"Karışık listemizin eleman sayısı: \", a)\n",
+    "b = print((100 - a), \"tane sayı my_list'in içinde yok.\")\n",
+    "\n",
+    "liste = []#0'dan 100'e kadar hangi sayılar eksik kontrol etmek için liste oluşturduk\n",
+    "my_list = [] #karışık sayıların bulunduğu liste\n",
+    "listNone = [] #my_listte olmayan sayıları buraya ekliyoruz.\n",
+    "\n",
+    "for x in range(1,101):\n",
+    "    liste.append(x)\n",
+    "    \n",
+    "for i in range(a): \n",
+    "    my_list.append(random.randint(0,100))\n",
     "random.shuffle(my_list)\n",
     "\n",
-    "my_list"
+    "listNone.append(set(liste)^set(my_list))\n",
+    "\n",
+    "print(\"Karışık Sayı Listemiz: \\n\", my_list)\n",
+    "print(\"my_list'te Olmayan Eksik Sayılar: \\n\", listNone)"
    ]
   }
  ],
