sorulardaki yazım yanlışları düzeltildi.

--- a/5-veriyapilari_sorular.ipynb/7-selection_sort.ipynb
+++ b/5-veriyapilari_sorular.ipynb/7-selection_sort.ipynb
@@ -16,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sayı listesi:  [-4, -1, 0, 4, 5, 1, -5, 2, 3, -2, -3]\n"
+      "Sayı listesi:  [1, -1, 3, -4, 2, 4, -5, -3, 5, -2, 0]\n"
      ]
     }
    ],
@@ -51,23 +51,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sayı listesi:  [-4, -1, 0, 4, 5, 1, -5, 2, 3, -2, -3]\n",
-      "[-5, -1, 0, 4, 5, 1, -4, 2, 3, -2, -3]\n",
-      "[-5, -4, 0, 4, 5, 1, -1, 2, 3, -2, -3]\n",
-      "[-5, -4, -3, 4, 5, 1, -1, 2, 3, -2, 0]\n",
-      "[-5, -4, -3, -2, 5, 1, -1, 2, 3, 4, 0]\n",
-      "[-5, -4, -3, -2, -1, 1, 5, 2, 3, 4, 0]\n",
-      "[-5, -4, -3, -2, -1, 0, 5, 2, 3, 4, 1]\n",
-      "[-5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5]\n",
-      "[-5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5]\n",
-      "[-5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5]\n",
+      "Sayı listesi:  [1, -1, 3, -4, 2, 4, -5, -3, 5, -2, 0]\n",
+      "[-5, -1, 3, -4, 2, 4, 1, -3, 5, -2, 0]\n",
+      "[-5, -4, 3, -1, 2, 4, 1, -3, 5, -2, 0]\n",
+      "[-5, -4, -3, -1, 2, 4, 1, 3, 5, -2, 0]\n",
+      "[-5, -4, -3, -2, 2, 4, 1, 3, 5, -1, 0]\n",
+      "[-5, -4, -3, -2, -1, 4, 1, 3, 5, 2, 0]\n",
+      "[-5, -4, -3, -2, -1, 0, 1, 3, 5, 2, 4]\n",
+      "[-5, -4, -3, -2, -1, 0, 1, 3, 5, 2, 4]\n",
+      "[-5, -4, -3, -2, -1, 0, 1, 2, 5, 3, 4]\n",
+      "[-5, -4, -3, -2, -1, 0, 1, 2, 3, 5, 4]\n",
       "[-5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5]\n",
       "[-5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5]\n",
       "Yeniden Sıralanan Liste [-5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5]\n"
@@ -78,18 +78,25 @@
     "print(\"Sayı listesi: \", my_list) \n",
     "\n",
     "for i in range(len(my_list)):\n",
-    "    minimumSayi , minIndex = my_list[i] , i # DÖnügdeki ilk i değerini hem mininumum index olarak hemde minimum sayı varsaydık \n",
+    "    minimumSayi , minIndex = my_list[i] , i \n",
+    "# DÖngüdeki ilk i değerini hem mininumum index olarak hemde minimum sayı varsaydık \n",
     "\n",
-    "    for j in range(i, len(my_list)): #ilk aldığımız sayıyı döngü aralığı olarak belirttik\n",
-    "        if my_list[j] < minimumSayi: #yeni döngüdeki sayı minimum sayıdan küçükse minimum sayı olarak ve minIndex de güncellenmiş oldu.            \n",
+    "    for j in range(i, len(my_list)): \n",
+    "#ilk aldığımız sayıyı döngü aralığı olarak belirttik\n",
+    "        if my_list[j] < minimumSayi:\n",
+    "#yeni döngüdeki sayı minimum sayıdan küçükse minimum sayı olarak ve minIndex de güncellenmiş oldu.            \n",
+    "\n",
     "#döngüdeki j sayısı minimumSayi'dan küçükse j sayısı minimumSayi ve minIndex yerine geçer\n",
     "            minimumSayi = my_list[j]\n",
     "            minIndex = j \n",
-    "    \n",
-    "    yerDegistirecekSayi = my_list[i] #ilk aldığımız sayıyla yer değiştirecek olan sayıyı birbirine eşitliyor, minIndex sayısına da küçük olarak aldığımız sayıyı koyuyoruz.\n",
+    "\n",
+    "#ilk aldığımız sayıyla yer değiştirecek olan sayıyı birbirine eşitliyor, minIndex sayısına da küçük olarak aldığımız sayıyı koyuyoruz.   \n",
+    "    yerDegistirecekSayi = my_list[i] \n",
     "    my_list[i] = my_list[minIndex]\n",
     "    my_list[minIndex] = yerDegistirecekSayi\n",
-    "    print(my_list) #listenin zunluğu kadar yer değişimi yaptırdığımız için liste doğru sıralanmış şekilde ulaşsa bile, liste uzunluğu kadar dönmeye devam eder.\n",
+    "\n",
+    "#listenin uzunluğu kadar yer değişimi yaptırdığımız için liste doğru sıralanmış şekilde ulaşsa bile, liste uzunluğu kadar dönmeye devam eder.    \n",
+    "    print(my_list) \n",
     "print(\"Yeniden Sıralanan Liste\", my_list)\n"
    ]
   }
