--- a/5-veriyapilari_sorular.ipynb/8-indexlerintoplami.ipynb
+++ b/5-veriyapilari_sorular.ipynb/8-indexlerintoplami.ipynb
@@ -44,13 +44,13 @@
     }
    ],
    "source": [
-    "def toplamhedefindex(nums, hedefSayi):\n",
-    "    for numsList in range(len(nums)): #Listedeki her bir sayı gezilir.\n",
-    "        for numsList2 in range(len(nums)):#Her değer için listedeki her bir sayı tekrar gezilir.\n",
-    "            if numsList == numsList2: #Aynı indexteki değer tekrar kullanılamayacağı için countinue ile döngüye devam edilir herhangi bir işlem yapmadan.\n",
+    "def toplamhedefindex(sayi, hedefSayi):\n",
+    "    for i in range(len(sayi)): #Listedeki her bir sayı için tekrar liste içinde gezilir.\n",
+    "        for j in range(len(sayi)):\n",
+    "            if i == j: \n",
     "                continue\n",
-    "            if nums[numsList] + nums[numsList2] == hedefSayi: #İlk tutulan sayıdan sonra tekrar liste içinde gezildiğinde eğer toplamları hedef değerdeki sayıya ulaşırsa değerler return edilir ve işlem sonlanır.\n",
-    "                return [numsList, numsList2]\n",
+    "            if sayi[i] + sayi[j] == hedefSayi: \n",
+    "                return [i, j]\n",
     "toplamhedefindex(nums = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 10], hedefSayi = 20)\n"
    ]
   }
