index toplamı ödevi

--- a/5-veriyapilari_sorular.ipynb/8-indexlerintoplami.ipynb
+++ b/5-veriyapilari_sorular.ipynb/8-indexlerintoplami.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -38,20 +38,21 @@
        "[10, 11]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def toplamhedefindex(sayi, hedefSayi):\n",
-    "    for i in range(len(sayi)): #Listedeki her bir sayı için tekrar liste içinde gezilir.\n",
-    "        for j in range(len(sayi)):\n",
+    "def indextoplamhedef(sayilistesi, hedefSayi):\n",
+    "    uzunluk = len(sayilistesi)\n",
+    "    for i in range(uzunluk): #Listedeki her bir sayı için tekrar liste içinde gezilir.\n",
+    "        for j in range(uzunluk):\n",
     "            if i == j: \n",
     "                continue\n",
-    "            if sayi[i] + sayi[j] == hedefSayi: \n",
+    "            if sayilistesi[i] + sayilistesi[j] == hedefSayi: \n",
     "                return [i, j]\n",
-    "toplamhedefindex(nums = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 10], hedefSayi = 20)\n"
+    "indextoplamhedef([0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 10], 20)\n"
    ]
   }
  ],
